specs/blueprints/errors/validation/missing_fieldset_entry_value.eno
# Querying a fieldset entry for a required but missing value 

-- input
fieldset:
entry =
-- input

-- javascript
eno.parse(input).fieldset('fieldset').entry('entry').requiredStringValue();
-- javascript

-- php
Eno\Parser::parse($input)->fieldset('fieldset')->entry('entry')->requiredStringValue();
-- php

-- python
enolib.parse(input).fieldset('fieldset').entry('entry').required_string_value()
-- python

-- ruby
Eno.parse(input).fieldset('fieldset').entry('entry').required_string_value
-- ruby

## ValidationError

-- text
The fieldset entry 'entry' must contain a value.
-- text

-- snippet
   Line | Content
      1 | fieldset:
 >    2 | entry =
-- snippet

selection: [1,7] => [1,7]
